styles/1_footer.styl
@import "0_variables.styl"

#footer
  padding 16px 0
  background #222
  color #eee
  fontSmoothing antialiased

  section
    width 940px
    margin 0 auto

  p
    font-size .9rem
    span
      display block
      span
        display inline

  a
    color #88c546
    text-decoration underline

  h2
    font-family bodyFont
    text-transform uppercase
    letter-spacing 1px
    font-size 18px

  .block-large
    padding 32px 0

  .intro-outro
    border-bottom none

    p
      font-size .8rem
      color rgba(255,255,255,.7)

    a
      text-decoration none
      color rgba(255,255,255,.7)
      line-height 2.5rem
      &:not(:last-child)
        margin 0 1rem 0 0
      &:hover
        color white

    .fa
      vertical-align middle

  .q42-logo
    object, img
      width 50px
      height 70px

#facebookLikeBox
  overflow hidden
  .fb-facepile
    min-width 100%
    min-height 160px
    margin-top -26px
  .fb-like
    margin-top 30px

